--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.5.12",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "detect-file-type": "^0.2.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
