--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "antd": "^5.16.2",
     "autoprefixer": "^10.4.19",
+    "aws-sdk": "^2.1635.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
     "heroicons": "^2.1.3",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
+    "mime-types": "^2.1.35",
     "moment": "^2.30.1",
     "next": "14.2.2",
     "react": "^18",
@@ -36,6 +38,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
