--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.592.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
     "antd": "^5.16.2",
     "autoprefixer": "^10.4.19",
-    "aws-sdk": "^2.1635.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.1",
