--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.592.0",
     "adm-zip": "^0.5.12",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
