--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
