--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.592.0",
     "adm-zip": "^0.5.12",
     "axios": "^1.7.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "twilio": "^5.3.5"
   }
 }
