--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "detect-file-type": "^0.2.8",
