feat: Customer Ecosystem & Auth System

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=4000
 MONGO_URI='mongodb+srv://suryaansh2002:suryaansh2002@cluster0.iyrbdvi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+# MONGO_URI='mongodb://localhost:27017/poddarmotors'
 
 # Twilio Configuration (Add your credentials here)
 TWILIO_ACCOUNT_SID=your_account_sid_here
