--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,13 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/index.js"
+        "dest": "/index.js",
+        "headers": {
+          "Access-Control-Allow-Credentials": "true",
+          "Access-Control-Allow-Origin": "https://www.poddarmotors.com",
+          "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+          "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With"
+        }
       }
     ]
-  }
+}
