--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "openai": "^6.9.1",
     "slugify": "^1.6.6",
     "twilio": "^5.3.5"
   }
