--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "mime-types": "^2.1.35",
     "moment": "^2.30.1",
     "next": "14.2.2",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
