fix: use dynamic API URL in buy page and add npm scripts

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "helmet": "^8.0.0",
     "next": "^15.0.1",
