Refactor home page design: remove redundant Features, modernize ButtonRows, and include translation updates

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,7 @@
-# API Configuration
-# For local development, set this to your local backend URL
-# For production, this will use the deployed backend URL automatically
 NEXT_PUBLIC_API_URL=http://localhost:4000
+
+# AWS S3 Configuration (for Next.js API Routes - server-side only)
+AWS_ACCESS_KEY_ID=your_access_key_here
+AWS_SECRET_ACCESS_KEY=your_secret_key_here
+AWS_REGION=ap-south-1
+AWS_S3_BUCKET=your_bucket_name
