--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "next": "14.2.2",
     "next-pwa": "^5.6.0",
+    "razorpay": "^2.9.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
