--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "openai": "^6.9.1",
+    "razorpay": "^2.9.6",
     "slugify": "^1.6.6",
     "twilio": "^5.3.5"
   }
