--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "url": "^0.11.3",
