--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "openai": "^6.9.1",
     "razorpay": "^2.9.6",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "twilio": "^5.3.5"
   }
 }
