--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.js\" \"**/*.jsx\""
+    "format": "prettier --write \"**/*.js\" \"**/*.jsx\"",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
@@ -47,6 +48,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.7",
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
     "postcss": "^8",
