--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.30.1",
     "next": "14.2.2",
     "next-pwa": "^5.6.0",
+    "papaparse": "^5.5.3",
     "razorpay": "^2.9.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
