Adjust admin auth cookies for cross-site login

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,7 +15,7 @@ WEBSITE_URL=https://poddarmotors.com
 SALES_FORWARDING_NUMBER=+91XXXXXXXXXX
 
 # Frontend URL for CORS configuration
-FRONTEND_URL=https://poddarmotors.com
+FRONTEND_URL=https://poddar-motors-rv.vercel.app
 
 # JWT secret for admin authentication
 JWT_SECRET=your_jwt_secret_here
