--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "csv-parser": "^3.2.0",
     "helmet": "^8.0.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
