--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
