--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "csv-parser": "^3.2.0",
     "detect-file-type": "^0.2.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
