--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.3.0",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.0",
     "openai": "^6.9.1",
     "razorpay": "^2.9.6",
