--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
 
     "functions": {
-      "index.js": {
+      "api/index.js": {
         "maxDuration": 60
       }
     },
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/index.js",
+        "dest": "/api/index.js",
         "headers": {
           "Access-Control-Allow-Credentials": "true",
           "Access-Control-Allow-Origin": "https://www.poddarmotors.com",
