--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.16.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
