--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.1.0",
     "openai": "^6.9.1",
     "razorpay": "^2.9.6",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "twilio": "^5.3.5"
