--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.11",
     "framer-motion": "^11.1.8",
     "heroicons": "^2.1.3",
+    "isomorphic-dompurify": "^2.35.0",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "mime-types": "^2.1.35",
