--- a/server/.env.example
+++ b/server/.env.example
@@ -25,3 +25,7 @@ AWS_ACCESS_KEY_ID=your_access_key_here
 AWS_SECRET_ACCESS_KEY=your_secret_key_here
 AWS_REGION=ap-south-1
 AWS_S3_BUCKET=your_bucket_name
+
+# Meta Conversions API (CAPI)
+META_PIXEL_ID=your_pixel_id
+META_API_ACCESS_TOKEN=your_access_token
