--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -31,12 +32,14 @@
     "formidable": "^3.5.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jws": "^4.0.1",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.0",
     "openai": "^6.9.1",
+    "qs": "^6.14.1",
     "razorpay": "^2.9.6",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
