--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,17 +8,12 @@
   "theme_color": "#F59E0B",
   "icons": [
     {
-      "src": "/icon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "/icon.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
