--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.3.0",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.0",
     "openai": "^6.9.1",
