--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,8 @@
 
     "functions": {
       "api/index.js": {
-        "maxDuration": 60
+        "maxDuration": 60,
+        "memory": 512
       }
     },
     "routes": [
