--- a/server/.env.example
+++ b/server/.env.example
@@ -29,3 +29,7 @@ AWS_S3_BUCKET=your_bucket_name
 # Meta Conversions API (CAPI)
 META_PIXEL_ID=your_pixel_id
 META_API_ACCESS_TOKEN=your_access_token
+
+# AI Services (Field Sales Audio Intelligence)
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
