--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
+    "@aws-sdk/s3-request-presigner": "^3.592.0",
     "@deepgram/sdk": "^4.11.3",
     "adm-zip": "^0.5.12",
     "axios": "^1.13.2",
